# process

./: .gitignore  README.md  index.html  package-lock.json  package.json
public/: splashscreen.html
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  db.rs  lib.rs  models.rs
src/components/: ActivityHeatmap.tsx  FilterBar.tsx  RecordForm.tsx  RecordRow.tsx  SetupPage.tsx
src/pages/: Home.tsx  Stats.tsx
